--- a/package.json
+++ b/package.json
@@ -12,15 +12,40 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/node": "^8.3.4",
-    "@astrojs/svelte": "^5.7.1",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/svelte": "^5.7.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "^7.8.1",
+    "@iconify-json/material-symbols": "^1.2.3",
+    "@iconify-json/mdi": "^1.2.1",
     "@playform/compress": "^0.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.9",
     "astro-compress": "^2.3.1",
+    "astro-icon": "^1.1.1",
+    "bits-ui": "^0.21.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.451.0",
+    "pocketbase": "^0.21.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sortablejs": "^1.15.3",
     "svelte": "^4.2.19",
+    "svelte-radix": "^1.1.1",
+    "tailwind-merge": "^2.5.3",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "terser": "^5.34.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@iconify/svelte": "^4.0.2"
   }
 }
