--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/svelte": "^5.7.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "^7.8.1",
+    "@felte/validator-zod": "^1.0.17",
     "@iconify-json/material-symbols": "^1.2.3",
     "@iconify-json/mdi": "^1.2.1",
     "@playform/compress": "^0.1.1",
@@ -28,16 +29,16 @@
     "astro": "^4.15.9",
     "astro-compress": "^2.3.1",
     "astro-icon": "^1.1.1",
-    "bits-ui": "^0.21.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "felte": "^1.2.14",
     "lucide-react": "^0.451.0",
     "pocketbase": "^0.21.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sortablejs": "^1.15.3",
     "svelte": "^4.2.19",
-    "svelte-radix": "^1.1.1",
+    "svelte-use-form": "^2.10.0",
     "tailwind-merge": "^2.5.3",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.13",
@@ -46,6 +47,14 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@iconify/svelte": "^4.0.2"
+    "@iconify/svelte": "^4.0.2",
+    "bits-ui": "^0.21.16",
+    "formsnap": "^1.0.1",
+    "mode-watcher": "^0.4.1",
+    "paneforge": "^0.0.6",
+    "svelte-radix": "^1.1.1",
+    "svelte-sonner": "^0.3.28",
+    "sveltekit-superforms": "^2.19.1",
+    "zod": "^3.23.8"
   }
 }
