--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "formsnap": "^1.0.1",
     "mode-watcher": "^0.4.1",
     "paneforge": "^0.0.6",
+    "svelte-dnd-action": "^0.9.51",
     "svelte-radix": "^1.1.1",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.19.1",
