--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/hls.js": "^1.0.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.9",
@@ -32,7 +33,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "felte": "^1.2.14",
+    "hls.js": "^1.5.17",
     "lucide-react": "^0.451.0",
+    "mpegts.js": "^1.7.3",
     "pocketbase": "^0.21.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
